XSCOLIBRI-11: "Quick Links" are not aligned with "My Recent Modifications" Fixed.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk/colibri@23154 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -1770,7 +1770,7 @@ div.xwikipanelcontents span.wikicreatelink a {
 
 div.xwikipanelcontents ul.star {
     list-style-type: none;
-    list-style-position: inside;
+    list-style-position: outside; /* Outside, otherwise IE6 adds some padding */
     padding: 0;
     margin: 0;
 }
